// Copyright 2024 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.


package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";

import "cloud/graphite/mmv2/services/google/dataproc/cluster.proto";

enum DataprocWorkflowTemplatePlacementManagedClusterConfigGceClusterConfigPrivateIPv6GoogleAccessEnum {
  DataprocWorkflowTemplatePlacementManagedClusterConfigGceClusterConfigPrivateIPv6GoogleAccessEnumNO_VALUE_DO_NOT_USE = 0;
  DataprocWorkflowTemplatePlacementManagedClusterConfigGceClusterConfigPrivateIPv6GoogleAccessEnumPRIVATE_IPV6_GOOGLE_ACCESS_UNSPECIFIED = 1;
  DataprocWorkflowTemplatePlacementManagedClusterConfigGceClusterConfigPrivateIPv6GoogleAccessEnumINHERIT_FROM_SUBNETWORK = 2;
  DataprocWorkflowTemplatePlacementManagedClusterConfigGceClusterConfigPrivateIPv6GoogleAccessEnumOUTBOUND = 3;
  DataprocWorkflowTemplatePlacementManagedClusterConfigGceClusterConfigPrivateIPv6GoogleAccessEnumBIDIRECTIONAL = 4;
}

enum DataprocWorkflowTemplatePlacementManagedClusterConfigGceClusterConfigReservationAffinityConsumeReservationTypeEnum {
  DataprocWorkflowTemplatePlacementManagedClusterConfigGceClusterConfigReservationAffinityConsumeReservationTypeEnumNO_VALUE_DO_NOT_USE = 0;
  DataprocWorkflowTemplatePlacementManagedClusterConfigGceClusterConfigReservationAffinityConsumeReservationTypeEnumTYPE_UNSPECIFIED = 1;
  DataprocWorkflowTemplatePlacementManagedClusterConfigGceClusterConfigReservationAffinityConsumeReservationTypeEnumNO_RESERVATION = 2;
  DataprocWorkflowTemplatePlacementManagedClusterConfigGceClusterConfigReservationAffinityConsumeReservationTypeEnumANY_RESERVATION = 3;
  DataprocWorkflowTemplatePlacementManagedClusterConfigGceClusterConfigReservationAffinityConsumeReservationTypeEnumSPECIFIC_RESERVATION = 4;
}

enum DataprocWorkflowTemplatePlacementManagedClusterConfigMasterConfigPreemptibilityEnum {
  DataprocWorkflowTemplatePlacementManagedClusterConfigMasterConfigPreemptibilityEnumNO_VALUE_DO_NOT_USE = 0;
  DataprocWorkflowTemplatePlacementManagedClusterConfigMasterConfigPreemptibilityEnumPREEMPTIBILITY_UNSPECIFIED = 1;
  DataprocWorkflowTemplatePlacementManagedClusterConfigMasterConfigPreemptibilityEnumNON_PREEMPTIBLE = 2;
  DataprocWorkflowTemplatePlacementManagedClusterConfigMasterConfigPreemptibilityEnumPREEMPTIBLE = 3;
}

enum DataprocWorkflowTemplatePlacementManagedClusterConfigWorkerConfigPreemptibilityEnum {
  DataprocWorkflowTemplatePlacementManagedClusterConfigWorkerConfigPreemptibilityEnumNO_VALUE_DO_NOT_USE = 0;
  DataprocWorkflowTemplatePlacementManagedClusterConfigWorkerConfigPreemptibilityEnumPREEMPTIBILITY_UNSPECIFIED = 1;
  DataprocWorkflowTemplatePlacementManagedClusterConfigWorkerConfigPreemptibilityEnumNON_PREEMPTIBLE = 2;
  DataprocWorkflowTemplatePlacementManagedClusterConfigWorkerConfigPreemptibilityEnumPREEMPTIBLE = 3;
}

enum DataprocWorkflowTemplatePlacementManagedClusterConfigSecondaryWorkerConfigPreemptibilityEnum {
  DataprocWorkflowTemplatePlacementManagedClusterConfigSecondaryWorkerConfigPreemptibilityEnumNO_VALUE_DO_NOT_USE = 0;
  DataprocWorkflowTemplatePlacementManagedClusterConfigSecondaryWorkerConfigPreemptibilityEnumPREEMPTIBILITY_UNSPECIFIED = 1;
  DataprocWorkflowTemplatePlacementManagedClusterConfigSecondaryWorkerConfigPreemptibilityEnumNON_PREEMPTIBLE = 2;
  DataprocWorkflowTemplatePlacementManagedClusterConfigSecondaryWorkerConfigPreemptibilityEnumPREEMPTIBLE = 3;
}

enum DataprocWorkflowTemplatePlacementManagedClusterConfigSoftwareConfigOptionalComponentsEnum {
  DataprocWorkflowTemplatePlacementManagedClusterConfigSoftwareConfigOptionalComponentsEnumNO_VALUE_DO_NOT_USE = 0;
  DataprocWorkflowTemplatePlacementManagedClusterConfigSoftwareConfigOptionalComponentsEnumCOMPONENT_UNSPECIFIED = 1;
  DataprocWorkflowTemplatePlacementManagedClusterConfigSoftwareConfigOptionalComponentsEnumANACONDA = 2;
  DataprocWorkflowTemplatePlacementManagedClusterConfigSoftwareConfigOptionalComponentsEnumDOCKER = 3;
  DataprocWorkflowTemplatePlacementManagedClusterConfigSoftwareConfigOptionalComponentsEnumDRUID = 4;
  DataprocWorkflowTemplatePlacementManagedClusterConfigSoftwareConfigOptionalComponentsEnumFLINK = 5;
  DataprocWorkflowTemplatePlacementManagedClusterConfigSoftwareConfigOptionalComponentsEnumHBASE = 6;
  DataprocWorkflowTemplatePlacementManagedClusterConfigSoftwareConfigOptionalComponentsEnumHIVE_WEBHCAT = 7;
  DataprocWorkflowTemplatePlacementManagedClusterConfigSoftwareConfigOptionalComponentsEnumJUPYTER = 8;
  DataprocWorkflowTemplatePlacementManagedClusterConfigSoftwareConfigOptionalComponentsEnumKERBEROS = 9;
  DataprocWorkflowTemplatePlacementManagedClusterConfigSoftwareConfigOptionalComponentsEnumPRESTO = 10;
  DataprocWorkflowTemplatePlacementManagedClusterConfigSoftwareConfigOptionalComponentsEnumRANGER = 11;
  DataprocWorkflowTemplatePlacementManagedClusterConfigSoftwareConfigOptionalComponentsEnumSOLR = 12;
  DataprocWorkflowTemplatePlacementManagedClusterConfigSoftwareConfigOptionalComponentsEnumZEPPELIN = 13;
  DataprocWorkflowTemplatePlacementManagedClusterConfigSoftwareConfigOptionalComponentsEnumZOOKEEPER = 14;
}

message DataprocWorkflowTemplate {
  string name = 1;
  int64 version = 2;
  string create_time = 3;
  string update_time = 4;
  map<string, string> labels = 5;
  DataprocWorkflowTemplatePlacement placement = 6;
  repeated DataprocWorkflowTemplateJobs jobs = 7;
  repeated DataprocWorkflowTemplateParameters parameters = 8;
  string dag_timeout = 9;
  string project = 10;
  string location = 11;
}

message DataprocWorkflowTemplatePlacement {
  DataprocWorkflowTemplatePlacementManagedCluster managed_cluster = 1;
  DataprocWorkflowTemplatePlacementClusterSelector cluster_selector = 2;
}

message DataprocWorkflowTemplatePlacementManagedCluster {
  string cluster_name = 1;
  DataprocWorkflowTemplatePlacementManagedClusterConfig config = 2;
  map<string, string> labels = 3;
}

message DataprocWorkflowTemplatePlacementManagedClusterConfig {
  string staging_bucket = 1;
  string temp_bucket = 2;
  DataprocWorkflowTemplatePlacementManagedClusterConfigGceClusterConfig gce_cluster_config = 3;
  DataprocWorkflowTemplatePlacementManagedClusterConfigMasterConfig master_config = 4;
  DataprocWorkflowTemplatePlacementManagedClusterConfigWorkerConfig worker_config = 5;
  DataprocWorkflowTemplatePlacementManagedClusterConfigSecondaryWorkerConfig secondary_worker_config = 6;
  DataprocWorkflowTemplatePlacementManagedClusterConfigSoftwareConfig software_config = 7;
  repeated DataprocWorkflowTemplatePlacementManagedClusterConfigInitializationActions initialization_actions = 8;
  DataprocWorkflowTemplatePlacementManagedClusterConfigEncryptionConfig encryption_config = 9;
  DataprocWorkflowTemplatePlacementManagedClusterConfigAutoscalingConfig autoscaling_config = 10;
  DataprocWorkflowTemplatePlacementManagedClusterConfigSecurityConfig security_config = 11;
  DataprocWorkflowTemplatePlacementManagedClusterConfigLifecycleConfig lifecycle_config = 12;
  DataprocWorkflowTemplatePlacementManagedClusterConfigEndpointConfig endpoint_config = 13;
}

message DataprocWorkflowTemplatePlacementManagedClusterConfigGceClusterConfig {
  string zone = 1;
  string network = 2;
  string subnetwork = 3;
  bool internal_ip_only = 4;
  DataprocWorkflowTemplatePlacementManagedClusterConfigGceClusterConfigPrivateIPv6GoogleAccessEnum private_ipv6_google_access = 5;
  string service_account = 6;
  repeated string service_account_scopes = 7;
  repeated string tags = 8;
  map<string, string> metadata = 9;
  DataprocWorkflowTemplatePlacementManagedClusterConfigGceClusterConfigReservationAffinity reservation_affinity = 10;
  DataprocWorkflowTemplatePlacementManagedClusterConfigGceClusterConfigNodeGroupAffinity node_group_affinity = 11;
  DataprocWorkflowTemplatePlacementManagedClusterConfigGceClusterConfigShieldedInstanceConfig shielded_instance_config = 12;
}

message DataprocWorkflowTemplatePlacementManagedClusterConfigGceClusterConfigReservationAffinity {
  DataprocWorkflowTemplatePlacementManagedClusterConfigGceClusterConfigReservationAffinityConsumeReservationTypeEnum consume_reservation_type = 1;
  string key = 2;
  repeated string values = 3;
}

message DataprocWorkflowTemplatePlacementManagedClusterConfigGceClusterConfigNodeGroupAffinity {
  string node_group = 1;
}

message DataprocWorkflowTemplatePlacementManagedClusterConfigGceClusterConfigShieldedInstanceConfig {
  bool enable_secure_boot = 1;
  bool enable_vtpm = 2;
  bool enable_integrity_monitoring = 3;
}

message DataprocWorkflowTemplatePlacementManagedClusterConfigMasterConfig {
  int64 num_instances = 1;
  repeated string instance_names = 2;
  string image = 3;
  string machine_type = 4;
  DataprocWorkflowTemplatePlacementManagedClusterConfigMasterConfigDiskConfig disk_config = 5;
  bool is_preemptible = 6;
  DataprocWorkflowTemplatePlacementManagedClusterConfigMasterConfigPreemptibilityEnum preemptibility = 7;
  DataprocWorkflowTemplatePlacementManagedClusterConfigMasterConfigManagedGroupConfig managed_group_config = 8;
  repeated DataprocWorkflowTemplatePlacementManagedClusterConfigMasterConfigAccelerators accelerators = 9;
  string min_cpu_platform = 10;
}

message DataprocWorkflowTemplatePlacementManagedClusterConfigMasterConfigDiskConfig {
  string boot_disk_type = 1;
  int64 boot_disk_size_gb = 2;
  int64 num_local_ssds = 3;
}

message DataprocWorkflowTemplatePlacementManagedClusterConfigMasterConfigManagedGroupConfig {
  string instance_template_name = 1;
  string instance_group_manager_name = 2;
}

message DataprocWorkflowTemplatePlacementManagedClusterConfigMasterConfigAccelerators {
  string accelerator_type = 1;
  int64 accelerator_count = 2;
}

message DataprocWorkflowTemplatePlacementManagedClusterConfigWorkerConfig {
  int64 num_instances = 1;
  repeated string instance_names = 2;
  string image = 3;
  string machine_type = 4;
  DataprocWorkflowTemplatePlacementManagedClusterConfigWorkerConfigDiskConfig disk_config = 5;
  bool is_preemptible = 6;
  DataprocWorkflowTemplatePlacementManagedClusterConfigWorkerConfigPreemptibilityEnum preemptibility = 7;
  DataprocWorkflowTemplatePlacementManagedClusterConfigWorkerConfigManagedGroupConfig managed_group_config = 8;
  repeated DataprocWorkflowTemplatePlacementManagedClusterConfigWorkerConfigAccelerators accelerators = 9;
  string min_cpu_platform = 10;
}

message DataprocWorkflowTemplatePlacementManagedClusterConfigWorkerConfigDiskConfig {
  string boot_disk_type = 1;
  int64 boot_disk_size_gb = 2;
  int64 num_local_ssds = 3;
}

message DataprocWorkflowTemplatePlacementManagedClusterConfigWorkerConfigManagedGroupConfig {
  string instance_template_name = 1;
  string instance_group_manager_name = 2;
}

message DataprocWorkflowTemplatePlacementManagedClusterConfigWorkerConfigAccelerators {
  string accelerator_type = 1;
  int64 accelerator_count = 2;
}

message DataprocWorkflowTemplatePlacementManagedClusterConfigSecondaryWorkerConfig {
  int64 num_instances = 1;
  repeated string instance_names = 2;
  string image = 3;
  string machine_type = 4;
  DataprocWorkflowTemplatePlacementManagedClusterConfigSecondaryWorkerConfigDiskConfig disk_config = 5;
  bool is_preemptible = 6;
  DataprocWorkflowTemplatePlacementManagedClusterConfigSecondaryWorkerConfigPreemptibilityEnum preemptibility = 7;
  DataprocWorkflowTemplatePlacementManagedClusterConfigSecondaryWorkerConfigManagedGroupConfig managed_group_config = 8;
  repeated DataprocWorkflowTemplatePlacementManagedClusterConfigSecondaryWorkerConfigAccelerators accelerators = 9;
  string min_cpu_platform = 10;
}

message DataprocWorkflowTemplatePlacementManagedClusterConfigSecondaryWorkerConfigDiskConfig {
  string boot_disk_type = 1;
  int64 boot_disk_size_gb = 2;
  int64 num_local_ssds = 3;
}

message DataprocWorkflowTemplatePlacementManagedClusterConfigSecondaryWorkerConfigManagedGroupConfig {
  string instance_template_name = 1;
  string instance_group_manager_name = 2;
}

message DataprocWorkflowTemplatePlacementManagedClusterConfigSecondaryWorkerConfigAccelerators {
  string accelerator_type = 1;
  int64 accelerator_count = 2;
}

message DataprocWorkflowTemplatePlacementManagedClusterConfigSoftwareConfig {
  string image_version = 1;
  map<string, string> properties = 2;
  repeated DataprocWorkflowTemplatePlacementManagedClusterConfigSoftwareConfigOptionalComponentsEnum optional_components = 3;
}

message DataprocWorkflowTemplatePlacementManagedClusterConfigInitializationActions {
  string executable_file = 1;
  string execution_timeout = 2;
}

message DataprocWorkflowTemplatePlacementManagedClusterConfigEncryptionConfig {
  string gce_pd_kms_key_name = 1;
}

message DataprocWorkflowTemplatePlacementManagedClusterConfigAutoscalingConfig {
  string policy = 1;
}

message DataprocWorkflowTemplatePlacementManagedClusterConfigSecurityConfig {
  DataprocWorkflowTemplatePlacementManagedClusterConfigSecurityConfigKerberosConfig kerberos_config = 1;
}

message DataprocWorkflowTemplatePlacementManagedClusterConfigSecurityConfigKerberosConfig {
  bool enable_kerberos = 1;
  string root_principal_password = 2;
  string kms_key = 3;
  string keystore = 4;
  string truststore = 5;
  string keystore_password = 6;
  string key_password = 7;
  string truststore_password = 8;
  string cross_realm_trust_realm = 9;
  string cross_realm_trust_kdc = 10;
  string cross_realm_trust_admin_server = 11;
  string cross_realm_trust_shared_password = 12;
  string kdc_db_key = 13;
  int64 tgt_lifetime_hours = 14;
  string realm = 15;
}

message DataprocWorkflowTemplatePlacementManagedClusterConfigLifecycleConfig {
  string idle_delete_ttl = 1;
  string auto_delete_time = 2;
  string auto_delete_ttl = 3;
  string idle_start_time = 4;
}

message DataprocWorkflowTemplatePlacementManagedClusterConfigEndpointConfig {
  map<string, string> http_ports = 1;
  bool enable_http_port_access = 2;
}

message DataprocWorkflowTemplatePlacementClusterSelector {
  string zone = 1;
  map<string, string> cluster_labels = 2;
}

message DataprocWorkflowTemplateJobs {
  string step_id = 1;
  DataprocWorkflowTemplateJobsHadoopJob hadoop_job = 2;
  DataprocWorkflowTemplateJobsSparkJob spark_job = 3;
  DataprocWorkflowTemplateJobsPysparkJob pyspark_job = 4;
  DataprocWorkflowTemplateJobsHiveJob hive_job = 5;
  DataprocWorkflowTemplateJobsPigJob pig_job = 6;
  DataprocWorkflowTemplateJobsSparkRJob spark_r_job = 7;
  DataprocWorkflowTemplateJobsSparkSqlJob spark_sql_job = 8;
  DataprocWorkflowTemplateJobsPrestoJob presto_job = 9;
  map<string, string> labels = 10;
  DataprocWorkflowTemplateJobsScheduling scheduling = 11;
  repeated string prerequisite_step_ids = 12;
}

message DataprocWorkflowTemplateJobsHadoopJob {
  string main_jar_file_uri = 1;
  string main_class = 2;
  repeated string args = 3;
  repeated string jar_file_uris = 4;
  repeated string file_uris = 5;
  repeated string archive_uris = 6;
  map<string, string> properties = 7;
  DataprocWorkflowTemplateJobsHadoopJobLoggingConfig logging_config = 8;
}

message DataprocWorkflowTemplateJobsHadoopJobLoggingConfig {
  map<string, string> driver_log_levels = 1;
}

message DataprocWorkflowTemplateJobsSparkJob {
  string main_jar_file_uri = 1;
  string main_class = 2;
  repeated string args = 3;
  repeated string jar_file_uris = 4;
  repeated string file_uris = 5;
  repeated string archive_uris = 6;
  map<string, string> properties = 7;
  DataprocWorkflowTemplateJobsSparkJobLoggingConfig logging_config = 8;
}

message DataprocWorkflowTemplateJobsSparkJobLoggingConfig {
  map<string, string> driver_log_levels = 1;
}

message DataprocWorkflowTemplateJobsPysparkJob {
  string main_python_file_uri = 1;
  repeated string args = 2;
  repeated string python_file_uris = 3;
  repeated string jar_file_uris = 4;
  repeated string file_uris = 5;
  repeated string archive_uris = 6;
  map<string, string> properties = 7;
  DataprocWorkflowTemplateJobsPysparkJobLoggingConfig logging_config = 8;
}

message DataprocWorkflowTemplateJobsPysparkJobLoggingConfig {
  map<string, string> driver_log_levels = 1;
}

message DataprocWorkflowTemplateJobsHiveJob {
  string query_file_uri = 1;
  DataprocWorkflowTemplateJobsHiveJobQueryList query_list = 2;
  bool continue_on_failure = 3;
  map<string, string> script_variables = 4;
  map<string, string> properties = 5;
  repeated string jar_file_uris = 6;
}

message DataprocWorkflowTemplateJobsHiveJobQueryList {
  repeated string queries = 1;
}

message DataprocWorkflowTemplateJobsPigJob {
  string query_file_uri = 1;
  DataprocWorkflowTemplateJobsPigJobQueryList query_list = 2;
  bool continue_on_failure = 3;
  map<string, string> script_variables = 4;
  map<string, string> properties = 5;
  repeated string jar_file_uris = 6;
  DataprocWorkflowTemplateJobsPigJobLoggingConfig logging_config = 7;
}

message DataprocWorkflowTemplateJobsPigJobQueryList {
  repeated string queries = 1;
}

message DataprocWorkflowTemplateJobsPigJobLoggingConfig {
  map<string, string> driver_log_levels = 1;
}

message DataprocWorkflowTemplateJobsSparkRJob {
  string main_r_file_uri = 1;
  repeated string args = 2;
  repeated string file_uris = 3;
  repeated string archive_uris = 4;
  map<string, string> properties = 5;
  DataprocWorkflowTemplateJobsSparkRJobLoggingConfig logging_config = 6;
}

message DataprocWorkflowTemplateJobsSparkRJobLoggingConfig {
  map<string, string> driver_log_levels = 1;
}

message DataprocWorkflowTemplateJobsSparkSqlJob {
  string query_file_uri = 1;
  DataprocWorkflowTemplateJobsSparkSqlJobQueryList query_list = 2;
  map<string, string> script_variables = 3;
  map<string, string> properties = 4;
  repeated string jar_file_uris = 5;
  DataprocWorkflowTemplateJobsSparkSqlJobLoggingConfig logging_config = 6;
}

message DataprocWorkflowTemplateJobsSparkSqlJobQueryList {
  repeated string queries = 1;
}

message DataprocWorkflowTemplateJobsSparkSqlJobLoggingConfig {
  map<string, string> driver_log_levels = 1;
}

message DataprocWorkflowTemplateJobsPrestoJob {
  string query_file_uri = 1;
  DataprocWorkflowTemplateJobsPrestoJobQueryList query_list = 2;
  bool continue_on_failure = 3;
  string output_format = 4;
  repeated string client_tags = 5;
  map<string, string> properties = 6;
  DataprocWorkflowTemplateJobsPrestoJobLoggingConfig logging_config = 7;
}

message DataprocWorkflowTemplateJobsPrestoJobQueryList {
  repeated string queries = 1;
}

message DataprocWorkflowTemplateJobsPrestoJobLoggingConfig {
  map<string, string> driver_log_levels = 1;
}

message DataprocWorkflowTemplateJobsScheduling {
  int64 max_failures_per_hour = 1;
  int64 max_failures_total = 2;
}

message DataprocWorkflowTemplateParameters {
  string name = 1;
  repeated string fields = 2;
  string description = 3;
  DataprocWorkflowTemplateParametersValidation validation = 4;
}

message DataprocWorkflowTemplateParametersValidation {
  DataprocWorkflowTemplateParametersValidationRegex regex = 1;
  DataprocWorkflowTemplateParametersValidationValues values = 2;
}

message DataprocWorkflowTemplateParametersValidationRegex {
  repeated string regexes = 1;
}

message DataprocWorkflowTemplateParametersValidationValues {
  repeated string values = 1;
}

message ApplyDataprocWorkflowTemplateRequest {
  DataprocWorkflowTemplate resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteDataprocWorkflowTemplateRequest {
  string service_account_file = 1;
  DataprocWorkflowTemplate resource = 2;
}

message ListDataprocWorkflowTemplateRequest {
  string service_account_file = 1;
  string Project = 2;
  string Location = 3;
}

message ListDataprocWorkflowTemplateResponse {
  repeated DataprocWorkflowTemplate items = 1;
}

service DataprocWorkflowTemplateService {
  rpc ApplyDataprocWorkflowTemplate(ApplyDataprocWorkflowTemplateRequest) returns (DataprocWorkflowTemplate);
  rpc DeleteDataprocWorkflowTemplate(DeleteDataprocWorkflowTemplateRequest) returns (google.protobuf.Empty);
  rpc ListDataprocWorkflowTemplate(ListDataprocWorkflowTemplateRequest) returns (ListDataprocWorkflowTemplateResponse);
}
